--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -21,7 +21,9 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: ./mvnw clean package -Dtestskip
+        run: |
+          chmod 777 ./mvnw
+          ./mvnw clean package -Dtestskip
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
