--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -62,6 +62,13 @@ jobs:
             echo "error"
             exit 1
           fi
+          
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Docker compose
         uses: appleboy/ssh-action@master
         with:
