--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -77,6 +77,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
+            docker login -u ${{ DOCKERHUB_USERNAME }} -p ${{ DOCKERHUB_TOKEN }}
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/server:latest
             docker-compose up -d
       - name: Check deploy server URL PORT 8080
