--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -96,7 +96,7 @@ jobs:
           script_stop: true
           script: |
             sudo docker exec -it nginxserver echo "set \$server_env ${{ env.TARGET_UPSTREAM }}" >> /etc/nginx/conf.d/server-env.inc 
-            nginx -s reload' 
+            sudo docker exec -it nginxserver nginx -s reload' 
 
       - name: Stop current server
         uses: appleboy/ssh-action@master
