--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
     group:
-      local: common, secret
+      local: common, local, secret
       blue: common, blue, secret
       green: common, green, secret
 
@@ -22,13 +22,11 @@ spring:
         registration:
           kakao:
             clientId: 2dc5c2ec61e5efeb6b952c1b5d381821
-            redirectUri: http://localhost:8080/login/oauth2/code/kakao
             authorizationGrantType: authorization_code
             clientAuthenticationMethod: POST
             clientName: Kakao
           naver:
             clientId: i4eW_RUc74M3Ci96bJuG
-            redirectUri: http://localhost:8080/login/oauth2/code/naver
             authorizationGrantType: authorization_code
             clientAuthenticationMethod: POST
             clientName: Naver
@@ -48,7 +46,25 @@ mybatis:
   mapper-locations:
     - /mappers/*.xml
 
-serverName: common
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao
+          naver:
+            redirectUri: http://localhost:8080/login/oauth2/code/naver
+
+server:
+  port: 8080
+
+serverName: local
 
 ---
 
@@ -57,9 +73,17 @@ spring:
   config:
     activate:
       on-profile: blue
-
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao
+          naver:
+            redirectUri: http://localhost:8080/login/oauth2/code/naver
 server:
   port: 8080
+  address: 3.37.230.177
 
 serverName: blue_server
 
@@ -70,8 +94,17 @@ spring:
   config:
     activate:
       on-profile: green
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao
+          naver:
+            redirectUri: http://localhost:8080/login/oauth2/code/naver
 
 server:
   port: 8081
+  address: 3.37.230.177
 
 serverName: green_server
